# sub-agents-on-hermes

./: .env.example  .gitignore  HERMES_DOCKER_SETUP.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml
docs/: DOCKER_COMPOSE_SETTINGS.md  HERMES_DEPLOY_AND_TEST.md  HERMES_HOME_AND_OS_HOME.md  OUTPUT_ISOLATION.md  WINDOWS_DEPLOYMENT.md
docs/prd/: 00-project-overview.md  01-considered-approaches.md  02-gold-session-management.md  03-open-threads.md  04-phase1-mvp-prd.md  05-integration-and-deployment.md  Architecture overview.drawio  Ceilings.drawio  Component map.drawio  Decision making GOLD.drawio  Deployment topology.drawio  Golden Session.xmind  Output isolation.drawio  Session lifecycle.drawio  one-task-core-flow.drawio
examples/: registry.example.json
examples/workspace-template/: .gitignore  .mcp.json.example  README.md  ado-workitem-task.md
examples/workspace-template/.claude/: ado_download.py  confine_writes.py  gold-context.md  settings.json  settings.local.json.example
golden_session/: README.md  __init__.py  __main__.py  cli.py  errors.py  gateway.py  locking.py  registry.py  result.py  runner.py  session.py  trust.py
reports/: windows-claude-spawn-fix-2026-07-19.md
scripts/: deploy-skills.ps1
skills/claude-code-gold/: SKILL.md
skills/claude-code-gold/references/: windows-claude-spawn-error.md  windows-mcp-prime.md
skills/windows-ai-agent-adaptation/: SKILL.md
tests/: conftest.py  test_cli.py  test_gateway.py  test_registry.py  test_runner.py  test_session.py
(+11 files in other folders)
